src/objects/MTN_Channels_Daily_Sumary__c.object
<CustomObject>
    <description>The daily container object for the mtn staff.</description>
    <fields>
        <fullName>Existing_Outlet_Visits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of outlets visited by the staff member that day</description>
        <label>Existing Outlet Visits</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Outlet_Visits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of new outlets visited this day</description>
        <label>New Outlet Visits</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The target for the number of outlet visits that day</description>
        <label>Outlet Visit Target</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The person this summary is for</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>MTN_Channels_Daily_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promotional_Activities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of promotional activities carried out that day</description>
        <label>Promotional Activities</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_End_Time__c</fullName>
        <description>The time that the staff member submitted their final submission of the day</description>
        <label>Work End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Start_Time__c</fullName>
        <description>The time that the staff member started work</description>
        <label>Work Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>MTN Channels Daily Sumary</label>
    <nameField>
        <displayFormat>MCDS{YY}{MM}{DD}{000000000}</displayFormat>
        <label>MTN Channels Daily Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTN Channels Daily Sumaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>